fix scrollbars

--- a/assets/css/album-page.css
+++ b/assets/css/album-page.css
@@ -1,105 +1,125 @@
 /* SIDEBAR SX */
 ul {
-    list-style-type: none;
-    font-style: "Circular";
-    font-style: normal;
-    font-weight: 300;
-    overflow: auto;
-    height: 900px;
+ list-style-type: none;
+ font-style: "Circular";
+ font-style: normal;
+ font-weight: 300;
+ overflow: auto;
+ height: 900px;
 }
 
 a {
-    text-decoration: none !important;
-    line-height: 2;
-    font-size: 15px;
-    color: #A3ADA0 !important;
-    transition: 200ms;
+ text-decoration: none !important;
+ line-height: 2;
+ font-size: 15px;
+ color: #a3ada0 !important;
+ transition: 200ms;
 }
 
 a i {
-    color: #A3ADA0 !important;
+ color: #a3ada0 !important;
 }
 
 .side-hover:hover {
-    color: white !important;
-    transition: 200ms;
+ color: white !important;
+ transition: 200ms;
 }
 
 li {
-    font-size: 14px;
-    color: #767676;
-    line-height: 2;
+ font-size: 14px;
+ color: #767676;
+ line-height: 2;
 }
 
 .fa-bookmark {
-    height: 20px;
-    width: 20px;
+ height: 20px;
+ width: 20px;
 }
 
 /* SIDEBAR DX */
 
 h6 {
-    font-style: "Circular";
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px !important;
-    color: #A3ADA0 !important;
+ font-style: "Circular";
+ font-style: normal;
+ font-weight: 300;
+ font-size: 14px !important;
+ color: #a3ada0 !important;
 }
 
 p {
-    font-style: "Circular";
-    font-style: normal;
-    font-weight: 300;
-    font-size: 11px;
-    color: #767676;
+ font-style: "Circular";
+ font-style: normal;
+ font-weight: 300;
+ font-size: 11px;
+ color: #767676;
 }
 
 .contenitoredx p {
-    line-height: 0.5;
+ line-height: 0.5;
 }
 
 .single-track {
-    transition: 200ms;
-    margin: 0 1em;
-    border-radius: 10px;
-
+ transition: 200ms;
+ margin: 0 1em;
+ border-radius: 10px;
 }
 
 .single-track:hover {
-    transition: 200ms;
-    background-color: rgba(214, 208, 208, 0.158);
+ transition: 200ms;
+ background-color: rgba(214, 208, 208, 0.158);
 }
 
 #pop-title {
-    font-size: 1rem !important;
-    transition: 200ms;
+ font-size: 1rem !important;
+ transition: 200ms;
 }
 
 #pop-title:hover {
-    transition: 200ms;
-    color: white !important;
-    text-decoration: underline !important;
+ transition: 200ms;
+ color: white !important;
+ text-decoration: underline !important;
 }
 
 #album-page-title {
-    font-size: 1rem !important;
-    transition: 200ms;
-    color: white !important;
+ font-size: 1rem !important;
+ transition: 200ms;
+ color: white !important;
 }
 
 #album-page-title:hover {
-    transition: 200ms;
-    cursor: pointer;
-    text-decoration: underline !important;
+ transition: 200ms;
+ cursor: pointer;
+ text-decoration: underline !important;
 }
 
 #track-list {
-    overflow: auto;
-    height: 50vh;
+ overflow: auto;
+ height: 50vh;
 }
 
 #icons i {
-    margin-right: 15px;
-    color: white;
-    font-size: 20px;
+ margin-right: 15px;
+ color: white;
+ font-size: 20px;
+}
+
+/* width */
+::-webkit-scrollbar {
+ width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+ background-color: #171717;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+ border-radius: 10px;
+ background: #8c8c8c47;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+ background: #8c8c8c;
 }
